Fixed layer order for navigation on small screens

--- a/src/components/Navbar/Navbar.less
+++ b/src/components/Navbar/Navbar.less
@@ -16,6 +16,7 @@
   position: fixed;
   min-height: @navbar-height;
   margin-top: -(@navbar-height);
+  z-index: 100;
 
   .left-panel {
     float: left;
